force-app/main/default/objects/OrderHistory__c/OrderHistory__c.object-meta.xml
<CustomObject>
    <label>주문내역</label>
    <nameField>
        <displayFormat>주문-{000000}</displayFormat>
        <label>주문번호</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>