force-app/main/default/objects/OrderHistory__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>고객명</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>주문내역</relationshipLabel>
    <relationshipName>AccHistoryNames</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>