force-app/main/default/objects/OrderHistory__c/fields/AccountPhone__c.field-meta.xml
<CustomField>
    <fullName>AccountPhone__c</fullName>
    <label>고객전화번호</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>