force-app/main/default/objects/OrderHistory__c/fields/BeforeDiscount__c.field-meta.xml
<CustomField>
    <fullName>BeforeDiscount__c</fullName>
    <label>판매금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>