force-app/main/default/objects/OrderHistory__c/fields/DiscountPrice__c.field-meta.xml
<CustomField>
    <fullName>DiscountPrice__c</fullName>
    <label>할인금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>