force-app/main/default/objects/OrderHistory__c/fields/OrderDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>판매일자</label>
    <required>true</required>
    <type>Date</type>
</CustomField>