force-app/main/default/objects/OrderHistory__c/fields/OrderDetail__c.field-meta.xml
<CustomField>
    <fullName>OrderDetail__c</fullName>
    <inlineHelpText>제품명1: 수량, 제품명2: 수량, ...</inlineHelpText>
    <label>상세내역</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>