force-app/main/default/objects/OrderHistory__c/fields/SalesBranch__c.field-meta.xml
<CustomField>
    <fullName>SalesBranch__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>판매점</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$User.Department</field>
            <operation>equals</operation>
            <valueField>Branch__c.Name</valueField>
        </filterItems>
        <filterItems>
            <field>$Profile.Id</field>
            <operation>equals</operation>
            <value>00eIR000001fnLEYAY</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>주문내역</relationshipLabel>
    <relationshipName>SalesBranches</relationshipName>
    <type>Lookup</type>
</CustomField>