force-app/main/default/objects/OrderHistory__c/recordTypes/CompletedOrder.recordType-meta.xml
<RecordType>
    <fullName>CompletedOrder</fullName>
    <active>true</active>
    <label>주문건</label>
</RecordType>