force-app/main/default/objects/OrderHistory__c/recordTypes/RefundedOrder.recordType-meta.xml
<RecordType>
    <fullName>RefundedOrder</fullName>
    <active>true</active>
    <label>환불건</label>
</RecordType>