force-app/main/default/objects/OrderHistory__c/validationRules/AccountNamePhone.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountNamePhone</fullName>
    <active>true</active>
    <errorConditionFormula>(AccountPhone__c &lt;&gt; AccountName__r.Phone__c)</errorConditionFormula>
    <errorDisplayField>AccountPhone__c</errorDisplayField>
    <errorMessage>해당 고객의 전화번호와 입력한 전화번호가 일치하지 않습니다.</errorMessage>
</ValidationRule>