force-app/main/default/objects/OrderHistory__c/validationRules/DiscountLimit.validationRule-meta.xml
<ValidationRule>
    <fullName>DiscountLimit</fullName>
    <active>true</active>
    <errorConditionFormula>(DiscountPercent__c &gt; 0.2)</errorConditionFormula>
    <errorDisplayField>DiscountPercent__c</errorDisplayField>
    <errorMessage>최대 할인율은 20% 입니다.</errorMessage>
</ValidationRule>