force-app/main/default/objects/OrderHistory__c/listViews/hwanbul.listView-meta.xml
<ListView>
    <fullName>hwanbul</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>OrderDate__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>OrderHistory__c.RefundedOrder</value>
    </filters>
    <label>환불건</label>
</ListView>