force-app/main/default/objects/OrderHistory__c/listViews/jumoon.listView-meta.xml
<ListView>
    <fullName>jumoon</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>OrderDate__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>OrderHistory__c.CompletedOrder</value>
    </filters>
    <label>주문건</label>
</ListView>